<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edt_plate_number"
        android:layout_width="match_parent"
        android:text="GST-8381"
        android:layout_height="wrap_content"
        android:hint="@string/hint_plate_number" />

    <EditText
        android:id="@+id/edt_date"
        android:enabled="false"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp" />

    <Button
        android:id="@+id/btn_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/edt_date"
        android:layout_toEndOf="@+id/edt_date"
        android:layout_toRightOf="@+id/edt_date"
        android:text="@string/btn_select_date" />

    <EditText
        android:id="@+id/edt_time"
        android:enabled="false"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edt_date"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true" />

    <Button
        android:id="@+id/btn_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_date"
        android:layout_alignStart="@+id/btn_date"
        android:layout_alignLeft="@+id/btn_date"
        android:text="@string/btn_select_time" />


    <Switch
        android:id="@+id/switch_disabilities"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/switch_disabilities" />

    <TextView
        android:id="@+id/txt_status"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_check_status"/>

    <Button
        android:id="@+id/btn_logs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_check_logs"/>

    <TextView
        android:gravity="center_horizontal"
        android:id="@+id/txt_total_fine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/note_list_text"/>

</LinearLayout>